Spring Data REST configuration